Changes for 3.4.3rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
..F....... [ZBX-12770] fixed links in select popup for user groups; updated group selection field in Administration->Users (gcalenko)
..F....... [ZBX-12576] fixed difference between item and web scenario item graphs on simple graph widget (gcalenko)
A......... [ZBX-8277] improved performance of hostgeneral.unlink() method; fixed SQL statement (Sasha)
.....J.... [ZBX-12705] fixed processing of MBean properties in jmx discovery (vjaceslavs)
..F....... [ZBX-12633] added horizontal scrollbar to the map in view mode; removed homepage label in maps and graphs; made graph timestamp visible only if debug-mode is on (miks)
..F....... [ZBX-12576] fixed error in simple graph widget for web scenario items (gcalenko)
..F....... [ZBX-12715] fixed problem box stretching in navigation tree in IE11; fixed position of all navigation tree problem boxes in Edge (miks)
..F....... [ZBX-12679] fixed escaping of translation strings with apostrophe in forms: dashboard sharing and monitoring, administration of housekeeper and trigger options, item edit and mass update, xml import, host edit, web scenario, trigger configuration. (gcalenko)
........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
.......PS. [ZBX-12691] moved item state,lastlogsize,mtime,lastclock configuration cache update from value reception to value processing (wiper)
........S. [ZBX-12802] reduced memory used by pre-processor manager item cache (wiper)
..F....... [ZBX-12619] fixed error displaying of zabbix server status widget (gcalenko)
A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
..F....... [ZBX-12709] fixed possibility to enter deleys with suffixes for new elements of slideshows (Sasha)
A......... [ZBX-12482] fixed behavior for graph prototypes when item prototype is deleted (Sasha)